# deepdrive-cpp-client

./: CMakeLists.txt  README.md  WORKSPACE  conanfile.txt  deepdrive_client.cpp  deepdrive_client.h
.clwb/: .bazelproject
deepdrive_client/: BUILD  TODO.md  deepdrive_client.cpp  deepdrive_client.hpp  forward_agent.cpp  libzmq.pc  zmq_vendored.hpp
main/: BUILD  deepdrive-cpp-client.cc  deepdrive_client.cpp  deepdrive_client.hpp  test.cpp
